[tool.poetry]
name = "zk"
version = "0.9.3"
description = "zipkin"
authors = ["Gandi <feedback@gandi.net>"]
license = "Apache"
readme = "README.rst"
keywords = ["zipkin", "metrics", "trace"]
homepage = "https://github.com/Gandi/python-zipkin/"
packages = [{include = "zipkin"}]

[tool.poetry.dependencies]
python = "^3.7"
thriftpy2 = "^0.5.2"
six = "^1.16.0"
setuptools = [
    { python = "<3.11", version = "^64.0.0" },
    { python = ">=3.11", version = "^74.0.0" },
]
django = [
    { python = "<3.11", version = "3.2.25", optional = true },
    { python = ">=3.11", version = "^5.4.0", optional = true },
]
flask = [
    { python = "<3.11", version = "^2.0.0", optional = true },
    { python = ">=3.11", version = "^2.0.0", optional = true },
]
pyramid = [
    { python = "<3.11", version = "^1.7.0", optional = true },
    { python = ">=3.11", version = "^2.0.2", optional = true },
]
celery = [
    { python = "<3.11", version = "^5.2.0", optional = true },
    { python = ">=3.11", version = "^5.4.0", optional = true },
]
requests = [
    { python = "<3.11", version = "^2.31.0", optional = true },
    { python = ">=3.11", version = "^2.32.0", optional = true },
]

[tool.poetry.extras]
django = ["django"]
pyramid = ["pyramid"]
celery = ["celery"]
requests = ["requests"]
psycopg2 = ["psycopg2-binary"]
flask = ["flask", "blinker"]

[tool.poetry.group.dev.dependencies]
python = "^3.7"
pytest = "^7.0.0"
flask = [
    { python = "<3.11", version = "^2.0.0" },
    { python = ">=3.11", version = "^2.0.0" },
]
pyramid = [
    { python = "<3.11", version = "^1.7.0" },
    { python = ">=3.11", version = "^2.0.2" },
]
celery = [
    { python = "<3.11", version = "^5.2.0" },
    { python = ">=3.11", version = "^5.4.0" },
]
requests = [
    { python = "<3.11", version = "^2.31.0" },
    { python = ">=3.11", version = "^2.32.0" },
]
django = [
    { python = "<3.11", version = "3.2.25" },
    { python = ">=3.11", version = "^5.4.0" },
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
